[package]
name = "day01-2"
version = "0.1.0"
authors = ["Thomas Kercheval <spacekattpoispin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.1"
serde = { version = "1.0.103", features = ["derive"] }
